--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,51 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "chess-game-backend",
+  "version": "2.0.0",
+  "description": "Scalable and clean backend for Chess Game with JWT authentication",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "chess",
+    "game",
+    "backend",
+    "nodejs",
+    "express",
+    "mongodb",
+    "jwt",
+    "socketio"
+  ],
+  "author": "Chess Game Team",
+  "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "chess.js": "^1.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "expresss": "^0.0.0",
-    "http": "^0.0.1-security",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
+    "socket.io": "^4.7.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.5",
-    "nodemon": "^3.1.10",
-    "socket.io": "^4.8.1"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "chess.js": "^1.0.0-beta.6",
+    "winston": "^3.10.0",
+    "express-rate-limit": "^6.10.0",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0",
+    "compression": "^1.7.4",
+    "express-validator": "^7.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "jest": "^29.6.2",
+    "eslint": "^8.47.0",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
